--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b68d7110",
+   "id": "b9dd4e9c",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a5b67b27",
+   "id": "3cb42b96",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c213280",
+   "id": "db83cb9d",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "226d1cd1",
+   "id": "8fe70985",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46d766c7",
+   "id": "93be3e1a",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b694ea7f",
+   "id": "3e0d5c24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "3f00427f",
+   "id": "193a8900",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8aea5cff",
+   "id": "c4bd15e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0682a474",
+   "id": "9cbc7fdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "bed1c7ea",
+   "id": "ae60888a",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5dad5f3e",
+   "id": "0c1334ba",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbaccf25",
+   "id": "d683cbc0",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "5b9cd7cc",
+   "id": "dbf7e059",
    "metadata": {},
    "outputs": [
     {
@@ -396,34 +396,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "ca95862e",
+   "execution_count": 122,
+   "id": "24dc8851",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7c3ecd0>\n",
-      "<__main__.Voiture object at 0x7fbab7c3ecd0>\n",
-      "<__main__.Voiture object at 0x7fbab7c3ecd0>\n",
+      "<__main__.Voiture object at 0x7fbab7c3ed30>\n",
+      "<__main__.Voiture object at 0x7fbab7c3ed30>\n",
+      "<__main__.Voiture object at 0x7fbab7c3ed30>\n",
       "vroum\n",
       "########\n",
-      "<__main__.Voiture object at 0x7fbab79d1550>\n",
-      "<__main__.Voiture object at 0x7fbab79d1550>\n",
-      "<__main__.Voiture object at 0x7fbab7c3ecd0>\n",
-      "vroum\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'est_demarree'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [121], line 25\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(voiture2)\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m#print(voiture1.couleur, voiture1.boite, voiture2.modele)\u001b[39;00m\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28mprint\u001b[39m(voiture1\u001b[38;5;241m.\u001b[39mdemarrer()\u001b[38;5;241m.\u001b[39mest_demarree, voiture2\u001b[38;5;241m.\u001b[39mest_demarree)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'est_demarree'"
+      "<__main__.Voiture object at 0x7fbab7b0f190>\n",
+      "<__main__.Voiture object at 0x7fbab7b0f190>\n",
+      "True False\n"
      ]
     }
    ],
@@ -444,6 +432,7 @@
     "voiture1 = Voiture(couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
     "print(voiture1)\n",
     "voiture1.demarrer()  \n",
+    "voiture1.immatriculation = \"000000\"\n",
     "## Voiture.demarrer(voiture1)\n",
     "\n",
     "#print(voiture1.couleur, voiture1.boite, voiture1.modele)\n",
@@ -458,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "6f13e3e9",
+   "id": "23e93822",
    "metadata": {
     "scrolled": false
    },
@@ -494,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "3d9db879",
+   "id": "212ec96c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f21d2fb0",
+   "id": "137b9ab4",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "08c272bd",
+   "id": "c9a9660e",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb4e97a",
+   "id": "4a4e4b9f",
    "metadata": {},
    "outputs": [],
    "source": []
