--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b9dd4e9c",
+   "id": "943c6e3c",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3cb42b96",
+   "id": "1cbe31d7",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db83cb9d",
+   "id": "225124ed",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8fe70985",
+   "id": "0b7595db",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93be3e1a",
+   "id": "b578d08b",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3e0d5c24",
+   "id": "2416f86c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "193a8900",
+   "id": "61e597f0",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c4bd15e8",
+   "id": "4637e02f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "9cbc7fdb",
+   "id": "b17bd170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "ae60888a",
+   "id": "7f4226f1",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0c1334ba",
+   "id": "28a2a5d3",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d683cbc0",
+   "id": "664770c3",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "dbf7e059",
+   "id": "d7c2ae52",
    "metadata": {},
    "outputs": [
     {
@@ -396,21 +396,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "24dc8851",
+   "execution_count": 123,
+   "id": "0ec9fbe5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7c3ed30>\n",
-      "<__main__.Voiture object at 0x7fbab7c3ed30>\n",
-      "<__main__.Voiture object at 0x7fbab7c3ed30>\n",
+      "<__main__.Voiture object at 0x7fbab7c69220>\n",
+      "<__main__.Voiture object at 0x7fbab7c69220>\n",
+      "<__main__.Voiture object at 0x7fbab7c69220>\n",
       "vroum\n",
       "########\n",
-      "<__main__.Voiture object at 0x7fbab7b0f190>\n",
-      "<__main__.Voiture object at 0x7fbab7b0f190>\n",
+      "<__main__.Voiture object at 0x7fbab7c695e0>\n",
+      "<__main__.Voiture object at 0x7fbab7c695e0>\n",
       "True False\n"
      ]
     }
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "23e93822",
+   "id": "493d446f",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "212ec96c",
+   "id": "b73f45bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,8 +492,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "137b9ab4",
+   "execution_count": 125,
+   "id": "6cd2af2b",
    "metadata": {},
    "outputs": [
     {
@@ -501,22 +501,26 @@
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">╭────────── </span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">class</span><span style=\"color: #000000; text-decoration-color: #000000\"> </span><span style=\"color: #008000; text-decoration-color: #008000\">'__main__.Voiture'</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">&gt;</span><span style=\"color: #000080; text-decoration-color: #000080\"> ───────────╮</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">╭─────────────────────────────────────────────╮</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
-       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Voiture</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7fbab7ae5490</span><span style=\"font-weight: bold\">&gt;</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Voiture</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7fbab7c695e0</span><span style=\"font-weight: bold\">&gt;</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">╰─────────────────────────────────────────────╯</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span>                                                 <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
-       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span>   <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">boite</span> = <span style=\"color: #008000; text-decoration-color: #008000\">'auto'</span>                                <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
-       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">couleur</span> = <span style=\"color: #008000; text-decoration-color: #008000\">'rouge'</span>                               <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span>        <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">boite</span> = <span style=\"color: #008000; text-decoration-color: #008000\">'manuelle'</span>                       <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span>      <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">couleur</span> = <span style=\"color: #008000; text-decoration-color: #008000\">'bleu'</span>                           <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">est_demarree</span> = <span style=\"color: #ff0000; text-decoration-color: #ff0000; font-style: italic\">False</span>                            <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span>       <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">modele</span> = <span style=\"color: #008000; text-decoration-color: #008000\">'megane'</span>                         <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">╰─────────────────────────────────────────────────╯</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
        "\u001b[34m╭─\u001b[0m\u001b[34m───────── \u001b[0m\u001b[1;34m<\u001b[0m\u001b[1;95mclass\u001b[0m\u001b[39m \u001b[0m\u001b[32m'__main__.Voiture'\u001b[0m\u001b[1;34m>\u001b[0m\u001b[34m ──────────\u001b[0m\u001b[34m─╮\u001b[0m\n",
        "\u001b[34m│\u001b[0m \u001b[32m╭─────────────────────────────────────────────╮\u001b[0m \u001b[34m│\u001b[0m\n",
-       "\u001b[34m│\u001b[0m \u001b[32m│\u001b[0m \u001b[1m<\u001b[0m\u001b[1;95m__main__.Voiture\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7fbab7ae5490\u001b[0m\u001b[1m>\u001b[0m \u001b[32m│\u001b[0m \u001b[34m│\u001b[0m\n",
+       "\u001b[34m│\u001b[0m \u001b[32m│\u001b[0m \u001b[1m<\u001b[0m\u001b[1;95m__main__.Voiture\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7fbab7c695e0\u001b[0m\u001b[1m>\u001b[0m \u001b[32m│\u001b[0m \u001b[34m│\u001b[0m\n",
        "\u001b[34m│\u001b[0m \u001b[32m╰─────────────────────────────────────────────╯\u001b[0m \u001b[34m│\u001b[0m\n",
        "\u001b[34m│\u001b[0m                                                 \u001b[34m│\u001b[0m\n",
-       "\u001b[34m│\u001b[0m   \u001b[3;33mboite\u001b[0m = \u001b[32m'auto'\u001b[0m                                \u001b[34m│\u001b[0m\n",
-       "\u001b[34m│\u001b[0m \u001b[3;33mcouleur\u001b[0m = \u001b[32m'rouge'\u001b[0m                               \u001b[34m│\u001b[0m\n",
+       "\u001b[34m│\u001b[0m        \u001b[3;33mboite\u001b[0m = \u001b[32m'manuelle'\u001b[0m                       \u001b[34m│\u001b[0m\n",
+       "\u001b[34m│\u001b[0m      \u001b[3;33mcouleur\u001b[0m = \u001b[32m'bleu'\u001b[0m                           \u001b[34m│\u001b[0m\n",
+       "\u001b[34m│\u001b[0m \u001b[3;33mest_demarree\u001b[0m = \u001b[3;91mFalse\u001b[0m                            \u001b[34m│\u001b[0m\n",
+       "\u001b[34m│\u001b[0m       \u001b[3;33mmodele\u001b[0m = \u001b[32m'megane'\u001b[0m                         \u001b[34m│\u001b[0m\n",
        "\u001b[34m╰─────────────────────────────────────────────────╯\u001b[0m\n"
       ]
      },
@@ -525,13 +529,13 @@
     }
    ],
    "source": [
-    "inspect(clio)"
+    "inspect(voiture2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c9a9660e",
+   "id": "71014059",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a4e4b9f",
+   "id": "1a70ba41",
    "metadata": {},
    "outputs": [],
    "source": []
