--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e003c51f",
+   "id": "94a3f808",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "891550c2",
+   "id": "3b6877a9",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a422707d",
+   "id": "22e217d3",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "329f1ac4",
+   "id": "ffe27595",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45e0180c",
+   "id": "1e450692",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4df788b5",
+   "id": "f1830991",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "86dbeb9d",
+   "id": "3305539c",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "797852fa",
+   "id": "a66820ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2c9e13d9",
+   "id": "5d43aa1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "09f7d1c8",
+   "id": "08c3f1cf",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c7cf7f4c",
+   "id": "8275f566",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adb1f4f0",
+   "id": "dd263cc1",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "f66666ca",
+   "id": "e19ceb14",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "eb57e8d8",
+   "id": "2143f7ff",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "3dbbcad4",
+   "id": "625d4fd2",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "89346ce4",
+   "id": "9a423dff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "a7d1e288",
+   "id": "453e5ad5",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "a52219b5",
+   "id": "b20cac72",
    "metadata": {},
    "outputs": [
     {
@@ -555,29 +555,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "f28989d5",
+   "execution_count": 132,
+   "id": "f0944e92",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a'}"
+       "'Une chaine, plein mots'"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Une grosse chaine, avec plein de mots\""
+    "\" \".join((\"Une grosse chaine, avec plein de mots\".split(\" \")[::2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "825e8b7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Une grosse chaine, avec plein de mots'"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\" \".join(['Une', 'grosse', 'chaine,', 'avec', 'plein', 'de', 'mots'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33e531fa",
+   "id": "3b1d706e",
    "metadata": {},
    "outputs": [],
    "source": []
