--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "13b5ac6d",
+   "id": "2df2f917",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b1120b5b",
+   "id": "26854dee",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70ea0acc",
+   "id": "5f3cbe60",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "870f572f",
+   "id": "723ec32f",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e61934a",
+   "id": "f484afff",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "88874154",
+   "id": "cd9017d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7c8f1249",
+   "id": "d3ac8e26",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7afca34f",
+   "id": "f7f1f1ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2698f522",
+   "id": "ed814201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a2d4e831",
+   "id": "29d5e404",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2b1942a4",
+   "id": "2e445f1b",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "670081c8",
+   "id": "1b537e1b",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "5da48b91",
+   "id": "be2da8c1",
    "metadata": {},
    "outputs": [
     {
@@ -396,21 +396,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "74e62537",
+   "execution_count": 140,
+   "id": "74daae00",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7c69220>\n",
-      "<__main__.Voiture object at 0x7fbab7c69220>\n",
-      "<__main__.Voiture object at 0x7fbab7c69220>\n",
+      "Une voiture rouge\n",
+      "Une voiture rouge\n",
       "vroum\n",
       "########\n",
-      "<__main__.Voiture object at 0x7fbab7c695e0>\n",
-      "<__main__.Voiture object at 0x7fbab7c695e0>\n",
+      "Une voiture bleu\n",
       "True False\n"
      ]
     }
@@ -418,7 +416,6 @@
    "source": [
     "class Voiture:\n",
     "    def __init__(self, couleur, modele_de_la_voiture, type_de_boite=\"auto\"):\n",
-    "        print(self)\n",
     "        self.modele = modele_de_la_voiture\n",
     "        self.boite = type_de_boite\n",
     "        self.couleur = couleur\n",
@@ -428,6 +425,9 @@
     "        print(self)\n",
     "        print(\"vroum\")\n",
     "        self.est_demarree = True\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f\"Une voiture {self.couleur}\"\n",
     "        \n",
     "voiture1 = Voiture(couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
     "print(voiture1)\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "5f4cdccc",
+   "id": "ba4f271d",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "1f7dbff5",
+   "id": "8b80d576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "507b314e",
+   "id": "992984b8",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c026b459",
+   "id": "578bbf03",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "56ae8694",
+   "id": "76e0f93f",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "78d6905c",
+   "id": "7d420c18",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "ad3c04f4",
+   "id": "343d0516",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "3ec2e7da",
+   "id": "003a27ae",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6c769c7",
+   "id": "1c145cad",
    "metadata": {},
    "outputs": [],
    "source": []
