--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "294f7ba4",
+   "id": "56b5b3d0",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f057c77d",
+   "id": "8a6a15e5",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "373e3459",
+   "id": "c9e6a382",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d8dccdf4",
+   "id": "bc1229a3",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33425eb0",
+   "id": "5422cc9c",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "765fa6d5",
+   "id": "714620a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d53b5dfe",
+   "id": "73c74c8e",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "844511bf",
+   "id": "7608130a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f7aaf5c4",
+   "id": "02f0976b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "54b5de69",
+   "id": "6f2357b6",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "28ee2914",
+   "id": "2121918c",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101a40f2",
+   "id": "fa7a0e9f",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "97ffb015",
+   "id": "c799da70",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "412d306f",
+   "id": "97535a55",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "91d32775",
+   "id": "cf4064a2",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "00b8313a",
+   "id": "63a09bad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "044edab6",
+   "id": "69dce308",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b3cc546f",
+   "id": "91a003a0",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "4a3572fc",
+   "id": "eb36735e",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "d95aa316",
+   "id": "c2651550",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "83a349d9",
+   "id": "ac2ff69a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "a892ee1a",
+   "id": "81df3662",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "1429ba3d",
+   "id": "61b81836",
    "metadata": {},
    "outputs": [
     {
@@ -650,8 +650,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 144,
+   "id": "88ef69a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Voiture"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(voiture1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8e5428d3",
+   "id": "f9ef7b5c",
    "metadata": {},
    "outputs": [],
    "source": []
