--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "56b5b3d0",
+   "id": "dac6c6a4",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8a6a15e5",
+   "id": "29c31437",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e6a382",
+   "id": "d89b172e",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bc1229a3",
+   "id": "4c9bdb89",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5422cc9c",
+   "id": "9bdb0a64",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "714620a4",
+   "id": "9eadc62b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "73c74c8e",
+   "id": "a961b834",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7608130a",
+   "id": "0f4d6cc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "02f0976b",
+   "id": "2dc4937b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6f2357b6",
+   "id": "964faaca",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2121918c",
+   "id": "8e48e700",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa7a0e9f",
+   "id": "4416a706",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c799da70",
+   "id": "1a239c97",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "97535a55",
+   "id": "990c13ea",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "cf4064a2",
+   "id": "8160abf0",
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "63a09bad",
+   "id": "6cb4d571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "69dce308",
+   "id": "dfa6ed0c",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "91a003a0",
+   "id": "01d72799",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "eb36735e",
+   "id": "ff5f8b93",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "c2651550",
+   "id": "315e0d7a",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "ac2ff69a",
+   "id": "32723302",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "81df3662",
+   "id": "85d7f594",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "61b81836",
+   "id": "21662db9",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "88ef69a8",
+   "id": "0b91256a",
    "metadata": {},
    "outputs": [
     {
@@ -671,8 +671,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 147,
+   "id": "ad1307d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dans mere\n",
+      "une methode dans mere\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Mere:\n",
+    "    def __init__(self):\n",
+    "        print(\"dans mere\")\n",
+    "    \n",
+    "    def une_methode(self):\n",
+    "        print(\"une methode dans mere\")\n",
+    "    \n",
+    "class Fille(Mere):\n",
+    "    pass\n",
+    "\n",
+    "m = Mere()\n",
+    "m.une_methode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "8a93d7d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dans mere\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = Fille()\n",
+    "f.un"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f9ef7b5c",
+   "id": "18d34944",
    "metadata": {},
    "outputs": [],
    "source": []
